# pax-mch2022-benchmark

./: .gitignore  .gitmodules  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  benchsys.c  main.c  smile.xcf  testing.cpp
main/include/: benchsys.h  main.h  testing.h
